add default path to root of GSI installation
git-svn-id: https://www-acc.gsi.de/svn/fesa/device/driver/gr-digitizers/trunk@17594 243f544d-f450-4db5-8dff-af105d85f54e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,7 @@ endif()
 #   - ROOT built with CMake. Add in CMAKE_PREFIX_PATH the installation prefix for ROOT
 list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
 
-# add default path on dal001
+# add default path of gsi-installation
 list(APPEND CMAKE_PREFIX_PATH "/opt/cern/root")
 
 #---Locate the ROOT package and defines a number of variables (e.g. ROOT_INCLUDE_DIRS)
