added initial version of power calc; added ZMQ data reader; made changes to  multible CMakeLists; changed power calc binding; prepared ps4000a_test for background solution

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -7,7 +7,8 @@
 #
 
 install(FILES
-    # digitizers_39_picoscope_4000a.block.yml DESTINATION share/gnuradio/grc/blocks
-        digitizers_39_picoscope_4000a.xml DESTINATION share/gnuradio/grc/blocks
+    # digitizers_39_picoscope_4000a.block.yml
+    digitizers_39_power_calc.block.yml DESTINATION share/gnuradio/grc/blocks
+    digitizers_39_picoscope_4000a.xml DESTINATION share/gnuradio/grc/blocks
     # digitizers_39_digitizers_picoscope_4000a DESTINATION share/gnuradio/grc/blocks
 )
