--- a/include/digitizers_39/CMakeLists.txt
+++ b/include/digitizers_39/CMakeLists.txt
@@ -18,5 +18,6 @@ install(FILES
     range.h 
     app_buffer.h 
     digitizer_block.h 
-    status.h DESTINATION include/digitizers_39
+    status.h
+    power_calc.h DESTINATION include/digitizers_39
 )
