added power_calc_test; switched to power test make; minor fix with power main header; added custom mag calc

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -35,7 +35,9 @@ link_directories(
 #   COMPONENT "digitizers_examples"
 # )
 
-add_executable(ps4000a_test ps4000a_test.cc)
+# add_executable(ps4000a_test ps4000a_test.cc)
+add_executable(power_calc_test power_calc_test.cc)
+
 find_package(Gnuradio "3.9" COMPONENTS
 		blocks
 		fec
@@ -48,6 +50,7 @@ find_package(Gnuradio "3.9" COMPONENTS
 		channels
 		qtgui
 		trellis
+		uhd
 		video-sdl
 		vocoder
 		wavelet
@@ -56,24 +59,45 @@ find_package(Gnuradio "3.9" COMPONENTS
 		soapy
 		)
 
-target_link_libraries(ps4000a_test
+# target_link_libraries(ps4000a_test
+# 	power_calc_test
+# 	${GNURADIO_RUNTIME_LIBRARIES}
+# 	${GNURADIO_ANALOG_LIBRARIES}
+# 	${GNURADIO_BLOCKS_LIBRARIES}
+# 	${GNURADIO_PMT_LIBRARIES}
+#     ${Boost_LIBRARIES}
+# 	gnuradio-digitizers_39
+#     gnuradio-blocks
+#     gnuradio::gnuradio-zeromq
+# #	asan
+# )
+
+target_link_libraries(power_calc_test
 	${GNURADIO_RUNTIME_LIBRARIES}
 	${GNURADIO_ANALOG_LIBRARIES}
 	${GNURADIO_BLOCKS_LIBRARIES}
 	${GNURADIO_PMT_LIBRARIES}
     ${Boost_LIBRARIES}
 	gnuradio-digitizers_39
-    gnuradio-blocks
+	gnuradio::gnuradio-blocks
+    gnuradio::gnuradio-qtgui
+    gnuradio::gnuradio-fft
+    gnuradio::gnuradio-analog
     gnuradio::gnuradio-zeromq
 #	asan
 )
 
+# INSTALL(TARGETS
+#   ps4000a_test
+#   DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
+#   COMPONENT "digitizers_examples"
+# )
+
 INSTALL(TARGETS
-  ps4000a_test
+  power_calc_test
   DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
   COMPONENT "digitizers_examples"
 )
-
 #add_executable(edge_trigger_cli edge_trigger_cli.cc)
 
 #target_link_libraries(edge_trigger_cli
