minor refactoring; added single point iir filter to phi

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -36,8 +36,7 @@ link_directories(
 # )
 
 # add_executable(ps4000a_test ps4000a_test.cc)
-# add_executable(power_calc_test power_calc_test.cc)
-add_executable(ps4000a_plus_power_calc ps4000a_plus_power_calc.cc)
+add_executable(power_calc_test power_calc_test.cc)
 
 find_package(Gnuradio "3.9" COMPONENTS
 		blocks
@@ -73,23 +72,8 @@ find_package(Gnuradio "3.9" COMPONENTS
 # #	asan
 # )
 
-# target_link_libraries(power_calc_test
-# 	${GNURADIO_RUNTIME_LIBRARIES}
-# 	${GNURADIO_ANALOG_LIBRARIES}
-# 	${GNURADIO_BLOCKS_LIBRARIES}
-# 	${GNURADIO_PMT_LIBRARIES}
-#     ${Boost_LIBRARIES}
-# 	gnuradio-digitizers_39
-# 	gnuradio::gnuradio-blocks
-#     gnuradio::gnuradio-qtgui
-# 	gnuradio::gnuradio-filter
-#     gnuradio::gnuradio-fft
-#     gnuradio::gnuradio-analog
-#     gnuradio::gnuradio-zeromq
-# #	asan
-# )
 
-target_link_libraries(ps4000a_plus_power_calc
+target_link_libraries(power_calc_test
 	${GNURADIO_RUNTIME_LIBRARIES}
 	${GNURADIO_ANALOG_LIBRARIES}
 	${GNURADIO_BLOCKS_LIBRARIES}
@@ -97,13 +81,44 @@ target_link_libraries(ps4000a_plus_power_calc
     ${Boost_LIBRARIES}
 	gnuradio-digitizers_39
 	gnuradio::gnuradio-blocks
-	gnuradio::gnuradio-filter
     gnuradio::gnuradio-qtgui
+	gnuradio::gnuradio-filter
     gnuradio::gnuradio-fft
     gnuradio::gnuradio-analog
     gnuradio::gnuradio-zeromq
 #	asan
 )
+
+INSTALL(TARGETS
+  power_calc_test
+  DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
+  COMPONENT "digitizers_examples"
+)
+
+
+# add_executable(ps4000a_plus_power_calc ps4000a_plus_power_calc.cc)
+
+# target_link_libraries(ps4000a_plus_power_calc
+# 	${GNURADIO_RUNTIME_LIBRARIES}
+# 	${GNURADIO_ANALOG_LIBRARIES}
+# 	${GNURADIO_BLOCKS_LIBRARIES}
+# 	${GNURADIO_PMT_LIBRARIES}
+#     ${Boost_LIBRARIES}
+# 	gnuradio-digitizers_39
+# 	gnuradio::gnuradio-blocks
+# 	gnuradio::gnuradio-filter
+#     gnuradio::gnuradio-qtgui
+#     gnuradio::gnuradio-fft
+#     gnuradio::gnuradio-analog
+#     gnuradio::gnuradio-zeromq
+# #	asan
+# )
+
+# INSTALL(TARGETS
+#   ps4000a_plus_power_calc
+#   DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
+#   COMPONENT "digitizers_examples"
+# )
 
 # INSTALL(TARGETS
 #   ps4000a_test
@@ -111,17 +126,6 @@ target_link_libraries(ps4000a_plus_power_calc
 #   COMPONENT "digitizers_examples"
 # )
 
-# INSTALL(TARGETS
-#   power_calc_test
-#   DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
-#   COMPONENT "digitizers_examples"
-# )
-
-INSTALL(TARGETS
-  ps4000a_plus_power_calc
-  DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
-  COMPONENT "digitizers_examples"
-)
 
 #add_executable(edge_trigger_cli edge_trigger_cli.cc)
 
