refactored CMakeList; added new test file with raw data out; fixed output

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -35,9 +35,6 @@ link_directories(
 #   COMPONENT "digitizers_examples"
 # )
 
-# add_executable(ps4000a_test ps4000a_test.cc)
-add_executable(power_calc_test power_calc_test.cc)
-
 find_package(Gnuradio "3.9" COMPONENTS
 		blocks
 		fec
@@ -59,6 +56,11 @@ find_package(Gnuradio "3.9" COMPONENTS
 		soapy
 		)
 
+# add_executable(ps4000a_test ps4000a_test.cc)
+add_executable(power_calc_test power_calc_test.cc)
+add_executable(ps4000a_plus_power_calc ps4000a_plus_power_calc.cc)
+add_executable(ps4000a_plus_power_calc_plus_raw ps4000a_plus_power_calc_plus_raw.cc)
+
 # target_link_libraries(ps4000a_test
 # 	power_calc_test
 # 	${GNURADIO_RUNTIME_LIBRARIES}
@@ -71,7 +73,6 @@ find_package(Gnuradio "3.9" COMPONENTS
 #     gnuradio::gnuradio-zeromq
 # #	asan
 # )
-
 
 target_link_libraries(power_calc_test
 	${GNURADIO_RUNTIME_LIBRARIES}
@@ -86,39 +87,45 @@ target_link_libraries(power_calc_test
     gnuradio::gnuradio-fft
     gnuradio::gnuradio-analog
     gnuradio::gnuradio-zeromq
-#	asan
+)
+
+target_link_libraries(ps4000a_plus_power_calc
+	${GNURADIO_RUNTIME_LIBRARIES}
+	${GNURADIO_ANALOG_LIBRARIES}
+	${GNURADIO_BLOCKS_LIBRARIES}
+	${GNURADIO_PMT_LIBRARIES}
+    ${Boost_LIBRARIES}
+	gnuradio-digitizers_39
+	gnuradio::gnuradio-blocks
+	gnuradio::gnuradio-filter
+    gnuradio::gnuradio-qtgui
+    gnuradio::gnuradio-fft
+    gnuradio::gnuradio-analog
+    gnuradio::gnuradio-zeromq
+)
+
+target_link_libraries(ps4000a_plus_power_calc_plus_raw
+	${GNURADIO_RUNTIME_LIBRARIES}
+	${GNURADIO_ANALOG_LIBRARIES}
+	${GNURADIO_BLOCKS_LIBRARIES}
+	${GNURADIO_PMT_LIBRARIES}
+    ${Boost_LIBRARIES}
+	gnuradio-digitizers_39
+	gnuradio::gnuradio-blocks
+	gnuradio::gnuradio-filter
+    gnuradio::gnuradio-qtgui
+    gnuradio::gnuradio-fft
+    gnuradio::gnuradio-analog
+    gnuradio::gnuradio-zeromq
 )
 
 INSTALL(TARGETS
+  ps4000a_plus_power_calc_plus_raw
+  ps4000a_plus_power_calc
   power_calc_test
   DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
   COMPONENT "digitizers_examples"
 )
-
-
-# add_executable(ps4000a_plus_power_calc ps4000a_plus_power_calc.cc)
-
-# target_link_libraries(ps4000a_plus_power_calc
-# 	${GNURADIO_RUNTIME_LIBRARIES}
-# 	${GNURADIO_ANALOG_LIBRARIES}
-# 	${GNURADIO_BLOCKS_LIBRARIES}
-# 	${GNURADIO_PMT_LIBRARIES}
-#     ${Boost_LIBRARIES}
-# 	gnuradio-digitizers_39
-# 	gnuradio::gnuradio-blocks
-# 	gnuradio::gnuradio-filter
-#     gnuradio::gnuradio-qtgui
-#     gnuradio::gnuradio-fft
-#     gnuradio::gnuradio-analog
-#     gnuradio::gnuradio-zeromq
-# #	asan
-# )
-
-# INSTALL(TARGETS
-#   ps4000a_plus_power_calc
-#   DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
-#   COMPONENT "digitizers_examples"
-# )
 
 # INSTALL(TARGETS
 #   ps4000a_test
@@ -134,7 +141,7 @@ INSTALL(TARGETS
 #	gnuradio-digitizers
 ##	asan
 #)
-#
+
 #INSTALL(TARGETS
 #  edge_trigger_cli
 #  DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
