--- a/python/bindings/CMakeLists.txt
+++ b/python/bindings/CMakeLists.txt
@@ -30,7 +30,8 @@ include(GrPybind)
 
 list(APPEND digitizers_39_python_files
     picoscope_4000a_python.cc
-    power_calc_python.cc python_bindings.cc)
+    power_calc_python.cc
+    mains_frequency_calc_python.cc python_bindings.cc)
 
 GR_PYBIND_MAKE_OOT(digitizers_39 
    ../..
