--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -58,11 +58,15 @@ find_package(Gnuradio "3.9" COMPONENTS
 
 # add_executable(ps4000a_test ps4000a_test.cc)
 add_executable(power_calc_test power_calc_test.cc)
+add_executable(mains_frequency_calc_test mains_frequency_calc_test.cc)
+
 add_executable(ps4000a_plus_power_calc ps4000a_plus_power_calc.cc)
 add_executable(ps4000a_plus_power_calc_plus_raw ps4000a_plus_power_calc_plus_raw.cc)
 add_executable(ps4000a_plus_power_calc_plus_raw_two_zmq ps4000a_plus_power_calc_plus_raw_two_zmq.cc)
 add_executable(ps4000a_plus_power_calc_plus_raw_three_zmq ps4000a_plus_power_calc_plus_raw_three_zmq.cc)
 add_executable(ps4000a_plus_power_calc_plus_raw_three_files ps4000a_plus_power_calc_plus_raw_three_files.cc)
+
+
 
 
 # target_link_libraries(ps4000a_test
@@ -89,6 +93,19 @@ target_link_libraries(power_calc_test
     gnuradio::gnuradio-qtgui
 	gnuradio::gnuradio-filter
     gnuradio::gnuradio-fft
+    gnuradio::gnuradio-analog
+    gnuradio::gnuradio-zeromq
+)
+
+target_link_libraries(mains_frequency_calc_test
+	${GNURADIO_RUNTIME_LIBRARIES}
+	${GNURADIO_ANALOG_LIBRARIES}
+	${GNURADIO_BLOCKS_LIBRARIES}
+	${GNURADIO_PMT_LIBRARIES}
+    ${Boost_LIBRARIES}
+	gnuradio-digitizers_39
+	gnuradio::gnuradio-blocks
+    gnuradio::gnuradio-qtgui
     gnuradio::gnuradio-analog
     gnuradio::gnuradio-zeromq
 )
@@ -175,6 +192,7 @@ INSTALL(TARGETS
 	ps4000a_plus_power_calc_plus_raw
 	ps4000a_plus_power_calc
 	power_calc_test
+	mains_frequency_calc_test
 	DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
 	COMPONENT "digitizers_examples"
 )
