--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -66,9 +66,7 @@ add_executable(ps4000a_plus_power_calc_plus_raw_two_zmq ps4000a_plus_power_calc_
 add_executable(ps4000a_plus_power_calc_plus_raw_three_zmq ps4000a_plus_power_calc_plus_raw_three_zmq.cc)
 add_executable(ps4000a_plus_power_calc_plus_raw_three_files ps4000a_plus_power_calc_plus_raw_three_files.cc)
 add_executable(ps4000a_plus_mains_frequency_calc_test ps4000a_plus_mains_frequency_calc_test.cc)
-
-
-
+add_executable(ps4000a_plus_low_frequency_spectrum_test ps4000a_plus_low_frequency_spectrum_test.cc)
 
 # target_link_libraries(ps4000a_test
 # 	power_calc_test
@@ -199,6 +197,21 @@ target_link_libraries(ps4000a_plus_mains_frequency_calc_test
     gnuradio::gnuradio-zeromq
 )
 
+target_link_libraries(ps4000a_plus_low_frequency_spectrum_test
+	${GNURADIO_RUNTIME_LIBRARIES}
+	${GNURADIO_ANALOG_LIBRARIES}
+	${GNURADIO_BLOCKS_LIBRARIES}
+	${GNURADIO_PMT_LIBRARIES}
+    ${Boost_LIBRARIES}
+	gnuradio-digitizers_39
+	gnuradio::gnuradio-blocks
+	gnuradio::gnuradio-filter
+    gnuradio::gnuradio-qtgui
+    gnuradio::gnuradio-fft
+    gnuradio::gnuradio-analog
+    gnuradio::gnuradio-zeromq
+)
+
 INSTALL(TARGETS
 	ps4000a_plus_power_calc_plus_raw_three_files
 	ps4000a_plus_power_calc_plus_raw_three_zmq
@@ -208,6 +221,7 @@ INSTALL(TARGETS
 	power_calc_test
 	ps4000a_plus_mains_frequency_calc_test
 	mains_frequency_calc_test
+	ps4000a_plus_low_frequency_spectrum_test
 	DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
 	COMPONENT "digitizers_examples"
 )
