added db to watt converter v1; modded freq spec;

--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -68,6 +68,8 @@ add_executable(ps4000a_plus_power_calc_plus_raw_three_files ps4000a_plus_power_c
 add_executable(ps4000a_plus_mains_frequency_calc_test ps4000a_plus_mains_frequency_calc_test.cc)
 add_executable(ps4000a_plus_low_frequency_spectrum_test ps4000a_plus_low_frequency_spectrum_test.cc)
 add_executable(ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq.cc)
+add_executable(db_to_watt_ff_test db_to_watt_ff_test.cc)
+
 
 
 # target_link_libraries(ps4000a_test
@@ -214,6 +216,21 @@ target_link_libraries(ps4000a_plus_low_frequency_spectrum_test
     gnuradio::gnuradio-zeromq
 )
 
+target_link_libraries(db_to_watt_ff_test
+	${GNURADIO_RUNTIME_LIBRARIES}
+	${GNURADIO_ANALOG_LIBRARIES}
+	${GNURADIO_BLOCKS_LIBRARIES}
+	${GNURADIO_PMT_LIBRARIES}
+    ${Boost_LIBRARIES}
+	gnuradio-digitizers_39
+	gnuradio::gnuradio-blocks
+	gnuradio::gnuradio-filter
+    gnuradio::gnuradio-qtgui
+    gnuradio::gnuradio-fft
+    gnuradio::gnuradio-analog
+    gnuradio::gnuradio-zeromq
+)
+
 target_link_libraries(ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq
 	${GNURADIO_RUNTIME_LIBRARIES}
 	${GNURADIO_ANALOG_LIBRARIES}
@@ -240,6 +257,7 @@ INSTALL(TARGETS
 	mains_frequency_calc_test
 	ps4000a_plus_low_frequency_spectrum_test
 	ps4000a_plus_power_calc_plus_raw_plus_mains_plus_freq_spec_five_zmq
+	db_to_watt_ff_test
 	DESTINATION ${GR_DIGITIZERS_EXAMPLES_DIR}/cpp
 	COMPONENT "digitizers_examples"
 )
