--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -17,6 +17,7 @@ list(APPEND digitizers_39_sources
     picoscope_4000a_impl.cc
     power_calc_impl.cc
     mains_frequency_calc_impl.cc
+    db_to_watt_ff_impl.cc
 )
 
 set(digitizers_39_sources "${digitizers_39_sources}" PARENT_SCOPE)
