--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -18,6 +18,7 @@ list(APPEND digitizers_39_sources
     power_calc_impl.cc
     mains_frequency_calc_impl.cc
     db_to_watt_ff_impl.cc
+    power_calc_ff_impl.cc
 )
 
 set(digitizers_39_sources "${digitizers_39_sources}" PARENT_SCOPE)
